[package]
name = "bevy-life"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2", features = ["default"] }
rand_core = "0.6"
bevy_rand = { version = "0.7.1", features = ["wyrand"] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false